--- a/.travis.yml
+++ b/.travis.yml
@@ -2,15 +2,29 @@ sudo: required
 
 services:
   - docker
+
+env:
+    global:
+          - DOCKER_CACHE_FILE=${HOME}/docker/cache.tar.gz
+          - DOCKER_NAME=codenvy-ws
+
+cache:
+    directories:
+          - ${HOME}/docker
+
+before_install:
+    - if [ -f ${DOCKER_CACHE_FILE} ]; then gunzip -c ${DOCKER_CACHE_FILE} | docker load; fi
  
 script:
-  - docker build -t codenvy-ws .
+  - docker build -t "$DOCKER_NAME" .
 
 after_success:
   - |
-    if [ "$TRAVIS_BRANCH" == "master" ]; then
+    if [ "$TRAVIS_BRANCH" == "master" ] && [ "$TRAVIS_PULL_REQUEST" == "false" ]; then
+    mkdir -p $(dirname ${DOCKER_CACHE_FILE});
+    docker save $(docker history -q "$DOCKER_USERNAME/$DOCKER_NAME:latest" | grep -v '<missing>') | gzip > ${DOCKER_CACHE_FILE};
     docker login -e="$DOCKER_EMAIL" -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD";
-    docker tag codenvy-ws "$DOCKER_USERNAME/codenvy-ws";
-    docker push "$DOCKER_USERNAME/codenvy-ws";
+    docker tag "$DOCKER_NAME" "$DOCKER_USERNAME/$DOCKER_NAME";
+    docker push "$DOCKER_USERNAME/$DOCKER_NAME";
     echo "push"
     fi
